Small spacing fix

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -399,4 +399,5 @@ div.compact {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    margin-right: 0.3em;
 }
